--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,7 +21,7 @@ jobs:
           distribution: 'corretto'
       -
         name: Build application
-        run: ./gradlew build
+        run: ./gradlew build -Dquarkus.package.type=uber-jar
       -
         name: Login in ghcr
         uses: docker/login-action@v3
