CHORE: queue connection config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,10 @@ quarkus.datasource.username=root
 quarkus.datasource.password=root
 
 quarkus.flyway.migrate-at-start=true
+
+mp.messaging.incoming.food.exchange.declare=false
+mp.messaging.incoming.food.queue.declare=false
+mp.messaging.incoming.food.username=guest
+mp.messaging.incoming.food.password=guest
+mp.messaging.incoming.food.host=localhost
+mp.messaging.incoming.food.port=5672
